--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/http": "^4.0.1",
     "@angular/platform-browser": "^4.0.1",
     "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/router": "^4.0.1"
+    "@angular/router": "^4.0.1",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "^5.4.0",
+    "systemjs": "^0.20.13",
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
     "@types/jasmine": "^2.5.47",
@@ -46,12 +50,14 @@
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.3",
     "karma-phantomjs-launcher": "^1.0.4",
+    "karma-remap-coverage": "^0.1.4",
     "karma-typescript": "^3.0.2",
     "lite-server": "^2.3.0",
+    "remap-istanbul": "^0.9.5",
     "requirejs": "^2.3.3",
     "ts-node": "^3.0.2",
     "tslint": "^5.1.0",
     "typescript": "^2.2.2",
-    "typings": "^2.1.1",
+    "typings": "^2.1.1"
   }
 }
