--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "target": "es5",
         "emitDecoratorMetadata": true,
     	"experimentalDecorators": true,
-    	"removeComments": false,
+    	"removeComments": true,
     	"noImplicitAny": false,
     	"suppressImplicitAnyIndexErrors": true,
     	"lib": ["es2015", "dom"]
